fix lualatex version problem, fix copyright symbol

--- a/inst/rmarkdown/templates/linguistics/resources/template.tex
+++ b/inst/rmarkdown/templates/linguistics/resources/template.tex
@@ -1,3 +1,5 @@
+\RequirePackage{luatex85}
+
 \documentclass[$class_options$]{Linguistics}
 \usepackage{hyperref}
 
@@ -25,7 +27,8 @@ $endif$
 
 \begin{copyrightpage}
 
-	TODO(copyright) 2019 Massachusetts Institute of Technology
+  TODO(copyright) 2019 Massachusetts Institute of Technology
+	% \(\copyright\) 2019 Massachusetts Institute of Technology
 
 	All rights reserved. No part of this book may be reproduced in
         any form or by any electronic or mechanical means (including
