--- a/inst/rmarkdown/templates/linguistics/resources/template.tex
+++ b/inst/rmarkdown/templates/linguistics/resources/template.tex
@@ -3,6 +3,10 @@
 \documentclass[$class_options$]{Linguistics}
 \usepackage{hyperref}
 
+$if(highlighting-macros)$
+$highlighting-macros$
+$endif$
+
 $for(header-includes)$
 $header-includes$
 $endfor$
