specify copyright year in yaml

--- a/inst/rmarkdown/templates/linguistics/resources/template.tex
+++ b/inst/rmarkdown/templates/linguistics/resources/template.tex
@@ -27,7 +27,7 @@ $endif$
 
 \begin{copyrightpage}
 
-	\(\copyright\) 2019 Massachusetts Institute of Technology
+	\(\copyright\) $copyright_year$ Massachusetts Institute of Technology
 
 	All rights reserved. No part of this book may be reproduced in
         any form or by any electronic or mechanical means (including
