copyright page tweaks

--- a/inst/rmarkdown/templates/linguistics/resources/template.tex
+++ b/inst/rmarkdown/templates/linguistics/resources/template.tex
@@ -42,10 +42,10 @@ $endif$
 
 	Library of Congress Cataloging-in-Publication Data
 
-	$title$ / $author$ .\\
+	$title$ / $author$\\
 	\hspace*{6pt} p. cm.
 
-	Includes bibliographical references and index.\\
+	Includes bibliographical references.\\
 	ISBN $ISBN$
 \vfill
 
