field for copyright page fonts

--- a/inst/rmarkdown/templates/newmath/resources/template.tex
+++ b/inst/rmarkdown/templates/newmath/resources/template.tex
@@ -34,9 +34,7 @@ $endif$
         photocopying, recording, or information storage and retrieval) without
         permission in writing from the publisher.
 
-	For information about special quantity discounts, please email special sales@mitpress.mit.edu.
-
-	This book was set in Syntax and Times Roman by the author.
+	This book was set in $copyright_fonts$ by the author.
 
 	Printed and bound in the United States of America.
 
